add search apis

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "csvtojson": "^1.1.9",
-    "elasticsearch": "^14.0.0"
+    "elasticsearch": "^14.0.0",
+    "fastify": "^0.35.3"
   },
   "devDependencies": {},
   "scripts": {
